data/derived/fa15/progs/unify/prog1541.ml.out
Characters 62-68:
  if n <= 0 then [] else  digitsOfInt ((n/10) add ([n mod 10]));;
                                       ^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
